--- a/Bc2JpsiMuNu_RapidSim_LHCb_binned_fit.ipynb
+++ b/Bc2JpsiMuNu_RapidSim_LHCb_binned_fit.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1NCeP5xteyzak2c6-6qzlKEfL_c5QWyow",
-      "authorship_tag": "ABX9TyN00ckFhyoAkhvKP3mKHPpu",
+      "authorship_tag": "ABX9TyMs7oh7lGIuiVtbGXh7KYi/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,6 +28,17 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/donalrinho/Bc2JpsiMuNu/blob/main/Bc2JpsiMuNu_RapidSim_LHCb_binned_fit.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Binned fit of the reconstructed decay angles using template histograms\n",
+        "\n",
+        "In this notebook, we fit the reconstructed decay angles in $B_c^+ \\to J/\\psi \\mu^+ \\nu_\\mu$ MC using a binned method. In this fit, we model each angular term as a separate histogram template, using the histograms we made in the previous notebook. Each of these templates get multiplied by their corresponding angular observable values (the helicity amplitudes) in order to build the total fit. Just like we did in our unbinned fit to the true decay angles in RapidSim, we want to measure the helicity amplitdue magnitudes and phases. "
+      ],
+      "metadata": {
+        "id": "vQ37VixHtXSU"
+      }
     },
     {
       "cell_type": "code",
@@ -119,6 +130,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Let's load the histograms we made for each angular term in the previous notebook. These will serve as our template PDFs, which we will add together to form the total fit PDF."
+      ],
+      "metadata": {
+        "id": "KXUEE1Ket_To"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#Load our histogram templates from previous notebook\n",
@@ -134,6 +154,15 @@
       },
       "execution_count": 2,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Load our MC, which we will use to create a dataset to fit. We randomly sample 100,000 events from our total MC sample, to act like a pretend LHCb dataset. We will want to fit the reconstructed decay angle distribution in this sample (like we would with a real dataset), to measure the helicity amplitdues."
+      ],
+      "metadata": {
+        "id": "Z32_3D80uIUa"
+      }
     },
     {
       "cell_type": "code",
@@ -180,6 +209,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Here we make a dictionary defining our x, y, and z fit variables, with some useful information:\n",
+        "* `name`: the name of the variable in our ROOT file. Note the `reco` here for reconstructed.\n",
+        "* `min` and `max`: the variable ranges.\n",
+        "* `bins`: the number of bins for the variable.\n",
+        "* `latex`: LaTeX name for use in plotting."
+      ],
+      "metadata": {
+        "id": "sHJScxteub1v"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#Define fit variables dict containing useful properties like name, min, max, LaTeX title\n",
@@ -193,6 +235,15 @@
       },
       "execution_count": 4,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "In the previous notebook, we defined our template histograms with a binning scheme that puts roughly equal numbers of events into each bin. Let's reload the binnings that we saved, and use them again here for consistency."
+      ],
+      "metadata": {
+        "id": "x6WtQ2pIuyLv"
+      }
     },
     {
       "cell_type": "code",
@@ -257,6 +308,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "For the binned fit, we need to make a histogram of our fit dataset. This histogram should be defined using the same binning scheme we used to make our templates, which we have stored in the `binnings` dictionary."
+      ],
+      "metadata": {
+        "id": "gnjogvLau9do"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#Make a hist of the dataset we will fit, filling it with our MC\n",
@@ -267,10 +327,11 @@
         "    .Variable(binnings[\"z_var\"], name=vars[\"z_var\"][\"name\"])\n",
         "    .Weight()\n",
         "    )\n",
+        "#Fill the histogram with the sampled MC DataFrame of 100k events\n",
         "data_h.fill(df_fit[vars[\"x_var\"][\"name\"]], \n",
         "            df_fit[vars[\"y_var\"][\"name\"]], \n",
         "            df_fit[vars[\"z_var\"][\"name\"]])\n",
-        "data_h = data_h.values() #convert to numpy array"
+        "data_h = data_h.values() #convert Hist to numpy array for use in the fit"
       ],
       "metadata": {
         "id": "-QWULwmZ3Q7l"
@@ -279,12 +340,21 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "In our binned fit, we want to maximise the likelihood of the PDF with respect to the data, in order to find the best-fit values of the helicity amplitudes. To do the fit, we must define a `loss` function. Here, we define the binned negative log-likelihood (NLL), which compares the data and PDF in each bin and sums over all bins. The idea of the fit is to minimise this NLL value, which is the same as maximising the likelihood. The fit will iterate over values of the helicity parameters until it minimised this NLL."
+      ],
+      "metadata": {
+        "id": "VA4xWBk-vPo0"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#Binned maximum likelihood function which we will minimise (in order to maximise the likelihood)\n",
         "def binned_nll(pdf, data):\n",
         "      return np.sum(pdf - data + data * np.log((data + 1e-14) / (pdf + 1e-14)))\n",
-        "      # 1e-14 added in case there are empty bins"
+        "      # 1e-14 added in case there are empty bins, to stop division by zero"
       ],
       "metadata": {
         "id": "pXMJoyq64Ao6"
@@ -293,12 +363,23 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Now we define our fit PDF, which is similar to the PDF we defined for our unbinned fit to the true decay angles in an earlier notebook. The key difference is that instead of a bunch of angular terms with sines and cosines, we now have histogram templates passed in via the `templates` parameters. For example, the term `templates[0]` corresponds to our 3D histogram template for the first angular term. And it gets multiplied by the corresponding bit of helicitiy amplitude in the first term, namely $2 |H_0|^2$.\n",
+        "\n",
+        "Our total PDF is given by the sum over all of the individual terms. And you can see that we use a total of six histogram templates to make the total PDF, one for each term in the decay rate. The output of the `make_pdf` function is a 3D numpy array, where each entry is the value of the PDF for a given bin in the reconstructed decay angles phase space."
+      ],
+      "metadata": {
+        "id": "N-SBc8EuwDif"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#Define our fit PDF as a sum of histogram templates, the binned analogue of what we did in our unbinned fit to the true angles\n",
         "def make_pdf(params, templates):\n",
         "  \n",
-        "  #Fit parameters, the angular coefficients\n",
+        "  #Fit parameters, the angular coefficients we will measure\n",
         "  H0_amp = params['H0_amp']\n",
         "  Hm_amp = params['Hm_amp']\n",
         "\n",
@@ -309,6 +390,7 @@
         "  H0_phi = 0.\n",
         "  Hp_amp = float(np.sqrt(1. - H0_amp**2 - Hm_amp**2))\n",
         "\n",
+        "  #Complex numbers defined\n",
         "  h_0 = tf.complex(H0_amp*np.cos(H0_phi),H0_amp*np.sin(H0_phi))\n",
         "  h_p = tf.complex(Hp_amp*np.cos(Hp_phi),Hp_amp*np.sin(Hp_phi))\n",
         "  h_m = tf.complex(Hm_amp*np.cos(Hm_phi),Hm_amp*np.sin(Hm_phi))\n",
@@ -321,6 +403,7 @@
         "  HpH0st = h_p*h_0st\n",
         "  HmH0st = h_m*h_0st\n",
         "\n",
+        "  #Total PDF given by a sum over each template multiplied by its corresponding bit of helicity amplitude\n",
         "  pdf = H0_amp**2 * 2 * templates[0]\n",
         "  pdf += Hp_amp**2 * 0.5 * templates[1]\n",
         "  pdf += Hm_amp**2 * 0.5 * templates[2]\n",
@@ -328,7 +411,7 @@
         "  pdf += -float(tf.math.real(HmH0st)) * templates[4]\n",
         "  pdf += float(tf.math.real(HpHmst)) * templates[5]\n",
         "\n",
-        "  #Normalise the PDF\n",
+        "  #Normalise the PDF to it integrates to 1\n",
         "  pdf = pdf / np.sum(pdf)\n",
         "  \n",
         "  return pdf"
@@ -338,6 +421,15 @@
       },
       "execution_count": 8,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now that we have our PDF, we can define a loss function which we will give to Minuit to minimise, thus measuring the helicity parameters. We give this loss function current values for our helicity parameters, which it uses to build a PDF using the `make_pdf` function. We then multiply this PDF by the number of events in our dataset (`n_data`), to scale the PDF to match the data histogram. We then calculate the NLL value for this PDF with respect to our dataset, using our `binned_nll` function. This `nll` value is then returned, and Minuit uses it to find a minimum value for the `nll`, our best-fit point."
+      ],
+      "metadata": {
+        "id": "njQxaCl4xPxZ"
+      }
     },
     {
       "cell_type": "code",
@@ -375,6 +467,17 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Let's set up some initial guesses for the parameters we are measuring. These are loosely based on what we measured in our unbinned fit to the true decay angles. We want our binned fit to the reconstructed decay angles to measure the same sort of values.\n",
+        "\n",
+        "Our initial guesses aren't so important, but they help the fit start somewhere reasonable."
+      ],
+      "metadata": {
+        "id": "mw3Cof5VxvfD"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#Initial parameter values\n",
@@ -389,6 +492,17 @@
       },
       "execution_count": 10,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now we make a dictionary of parameters, which we give to Minuit to build our loss function. We use our initial guesses above, plus lower and upper limits. We also name each of our parameters to help us see what is what in our fit output.\n",
+        "\n",
+        "Note the use of `rand` here, which helps us run the same fit several times inside the notebook. If you want to rerun the fit, you should rerun the cells from this point onwards. This will make new fit parameters with new names for `zfit` to work with."
+      ],
+      "metadata": {
+        "id": "fKtq-hEgyC21"
+      }
     },
     {
       "cell_type": "code",
@@ -406,6 +520,15 @@
       },
       "execution_count": 11,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let's test that our PDF is being build correctly, and that our `nll` function also returns a number that makes sense. We can also calculate a binned $\\chi^2$ statistic, which should be around 1 (this will depend on how close our initial parameter guesses are to the true values)."
+      ],
+      "metadata": {
+        "id": "66RGHF4pybIJ"
+      }
     },
     {
       "cell_type": "code",
@@ -443,6 +566,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now we run the fit, by calling `minimiser.minimize(loss, params)`. Here we are giving Minuit our custom loss function, and our dictionary of parameters. The job of Minuit is to minimise the loss function, to find the best numerical values for our paramteters. After, we cann the `hesse` algorithm to calculate uncertainties on our fit parameters. These will be larger than in our unbinned fit to the true decay angles, because:\n",
+        "* We are fitting 100k events here\n",
+        "* The binned fit is less precise than the unbinned, because we are using templates defined in the reconstructed decay angles. This fit can never be as precise as an unbinned fit to the true angles, because of the missing information from the neutrino."
+      ],
+      "metadata": {
+        "id": "_R_WgnfLyvKT"
+      }
     },
     {
       "cell_type": "code",
@@ -500,6 +634,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now we can store our results, in the same way we did in our unbinned fit to the true decay angles."
+      ],
+      "metadata": {
+        "id": "LvjfGRp2zVZQ"
+      }
     },
     {
       "cell_type": "code",
